@@ -36,6 +36,8 @@ EXPORTS
 	winx_get_drive_type
 	winx_get_volume_information
 	winx_get_free_volume_regions
+	winx_add_volume_region
+	winx_sub_volume_region
 	winx_release_free_volume_regions
 	winx_vflush
 	winx_fopen
