@@ -187,6 +187,10 @@ typedef struct _winx_volume_region {
 } winx_volume_region;
 
 winx_volume_region * __stdcall winx_get_free_volume_regions(char volume_letter,int flags);
+winx_volume_region * __stdcall winx_add_volume_region(winx_volume_region *rlist,
+		ULONGLONG lcn,ULONGLONG length);
+winx_volume_region * __stdcall winx_sub_volume_region(winx_volume_region *rlist,
+		ULONGLONG lcn,ULONGLONG length);
 void __stdcall winx_release_free_volume_regions(winx_volume_region *rlist);
 
 WINX_FILE * __stdcall winx_fopen(const char *filename,const char *mode);
