@@ -9,6 +9,7 @@ HISTORY
       of the volume analysis
     - winx_patcomp, winx_patfind, winx_patfree, winx_wcsdup,
       winx_ftw_dump_file, winx_vflush, winx_get_free_volume_regions,
+      winx_add_volume_region, winx_sub_volume_region,
       winx_release_free_volume_regions functions added to zenwinx library
     - the following translations were updated:
 
